force-app/main/default/objects/SchedulingPlan__c/SchedulingPlan__c.object-meta.xml
<CustomObject>
    <label>SchedulingPlan</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>SchedulingPlan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SchedulingPlan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>