force-app/main/default/objects/SchedulingPlan__c/fields/DaysOfMonth__c.field-meta.xml
<CustomField>
    <fullName>DaysOfMonth__c</fullName>
    <formula>DAY(ADDMONTHS(DATE(Year__c , Month__c, 1), 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>