force-app/main/default/objects/SchedulingPlan__c/fields/NormalCount__c.field-meta.xml
<CustomField>
    <fullName>NormalCount__c</fullName>
    <label>Normal Count</label>
    <summaryFilterItems>
        <field>SchedulingTask__c.IsNormal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SchedulingTask__c.SchedulingPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>