force-app/main/default/objects/SchedulingPlan__c/fields/OnDutyCount__c.field-meta.xml
<CustomField>
    <fullName>OnDutyCount__c</fullName>
    <label>On Duty Count</label>
    <summaryForeignKey>SchedulingTask__c.SchedulingPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>