force-app/main/default/objects/SchedulingPlan__c/fields/PersonalLeaveCount__c.field-meta.xml
<CustomField>
    <fullName>PersonalLeaveCount__c</fullName>
    <label>Personal Leave Count</label>
    <summaryFilterItems>
        <field>SchedulingTask__c.ApplicationLeaveType__c</field>
        <operation>equals</operation>
        <value>Personal Leave</value>
    </summaryFilterItems>
    <summaryForeignKey>SchedulingTask__c.SchedulingPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>