force-app/main/default/objects/SchedulingPlan__c/fields/PlanMonth__c.field-meta.xml
<CustomField>
    <fullName>PlanMonth__c</fullName>
    <formula>TEXT(Year__c) +  TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Month</label>
    <type>Text</type>
</CustomField>