force-app/main/default/objects/SchedulingPlan__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>Responsible_person__r.Shop_Name__r.Name</formula>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>