force-app/main/default/objects/SchedulingPlan__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>Responsible_person__r.Principal__r.FirstName + &apos; &apos; + Responsible_person__r.Principal__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>